@@ -27,6 +27,8 @@
 ## Technical
 ##
 
+- Apple Driver: Automatically enable GPU support on Apple OpenCL instead of CPU support
+- Apple Driver: Updated requirements to use Apple OpenCL API to macOS 13.0
 - AMD Driver: Updated requirements for AMD Windows drivers to "AMD Adrenalin Edition" (Adrenalin 22.5.1 or later)
 - Modules: Added support for non-zero IVs for -m 6800 (Lastpass). Also added `tools/lastpass2hashcat.py`
 - Status Code: Add specific return code for self-test fail (-11)
